# Q4_learning

./: CryptoDataAgent.py  OpenAI_SDK.md  README.md  multi_query_agent.py  poetry_agent_handoffs_assignment.py  task_08.md  teacher_agent_and_input_guardrail.py  what_is_generative_ai.md
cloud-native-development/: Deploy any project on AWS for FREE.md  ckad-certification-guide.md  docker-terms-list.md  kubernetes-terms-list.md
fastdca-p1/: main.py
fastdca_p2/: main.py  pydantic_example_1.py  pydantic_example_2.py  pydantic_example_3.py
fastdca_p3/: main.py
fastdca_p4/: main.py  pyproject.toml
model-context-protocol/: README.md
openclaw/openclaw-mastery-course/: README.md  lesson-eight-make-it-proactive.md  lesson-eleven-connect-google-workspace.md  lesson-five-memory-and-commands.md  lesson-four-customize-your-employee-brain.md  lesson-nine-give-it-a-voice.md  lesson-one-personal-ai-employee.md  lesson-seven-connect-external-tools.md  lesson-six-install-and-discover-the-ecosystem.md  lesson-ten-add-a-second-agent.md  lesson-three-task-delegation-and-tool-profile.md  lesson-twelve-orchestrate-other-agents.md  lesson-two-install-and-connect-your-employee.md
openclaw/openclaw_mcqs/: mcqs_part-three.md  mcqs_part_five.md  mcqs_part_four.md  mcqs_part_one.md  mcqs_part_two.md
pronpt-engineering/: README.md  practice_mcq_level_1.md  practice_mcq_level_2.md  prompts.md
spec-driven-development/: README.md
spec-kit-plus/: GEMINI.md
spec-kit-plus/.gemini/: settings.json
task_06/: main.py
task_07/: pyproject.toml
task_07/src/uv_task/: __init__.py  hello.py
(+43 files in other folders)
